Refactoring tests.